tests/tooling/fixtures/native/recovery/negative/negative_pure_definition_impure_transitive_call.objc3
// Negative fixture: pure definitions reject transitive impure callees.
// Expected diagnostic code(s): O3S215.
module NegativePureDefinitionImpureTransitiveCall;

let counter = 0;

fn bump() -> i32 {
  counter = counter + 1;
  return counter;
}

pure fn touch() -> i32 {
  return bump();
}

fn main() -> i32 {
  return touch();
}
